--- a/tools/package.json
+++ b/tools/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chatgpt": "^5.2.5",
     "edit-json-file": "^1.7.0",
+    "moment": "^2.29.4",
     "ora": "^7.0.1"
   }
 }
