--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "edit-json-file": "^1.7.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "winston": "^3.10.0"
   }
 }
